--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section>
         <img scr="#" alt="imagem01">
         <div>
-            <h2>introdução</h2>
+            <h2>Introdução</h2>
             <p>Como um conjunto de inovações mudaram a vida de milhões de brasileiros</p>
     </section>
 
