--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </heather>
 
     <section>
-        <img scr="#" alt="imagem01">
+        <img scr="#" alt="aguapotavell">
         <div>
             <h2>Introdução</h2>
             <p>Como um conjunto de inovações mudaram a vida de milhões de brasileiros</p>
