--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Água Potável no Interior</title>
     <link rel="stylesheet" href="style.css">
-    
+
     
 
 </head>
@@ -17,7 +17,7 @@
     </heather>
 
     <section>
-        <img scr="#" alt="aguapotavell">
+        <img scr="#" alt="aguapotavel">
         <div>
             <h2>Introdução</h2>
             <p>Como um conjunto de inovações mudaram a vida de milhões de brasileiros</p>
