--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
             O objetivo dessas iniciativas é não apenas melhorar o acesso à água potável no interior, mas também promover a sustentabilidade ambiental e o desenvolvimento resiliente das comunidades rurais diante dos desafios contemporâneos.
        
     </section>
+    <section>
+        <h2> Justificativa do Projeto</h2>
+        O projeto tem como justificativa a melhoria do acesso à água potável em regiões rurais. Este é um problema global que afeta milhões de pessoas, 
+        especialmente em áreas remotas onde a infraestrutura de água é limitada. Ao explorar tecnologias de tratamento de água, sistemas de captação de água da chuva, 
+        métodos avançados de purificação e técnicas de irrigação eficiente, o estudo propõe soluções práticas para aumentar a disponibilidade de água potável, fortalecer 
+        a resiliência das comunidades rurais às mudanças climáticas e promover práticas sustentáveis de gestão de recursos hídricos e de solo. Além disso, ao analisar o 
+        impacto dessas iniciativas na qualidade da água e na recuperação de aquíferos, o estudo busca contribuir para um desenvolvimento rural mais sustentável e resiliente, 
+        alinhado aos desafios contemporâneos de conservação ambiental e segurança hídrica.
+
+    </section>
 
 
     
